...
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="@+id/contactName"
            app:layout_constraintTop_toBottomOf="@+id/contactName">

            <ImageView
                android:id="@+id/profilePic"
                android:layout_width="0dp"
                android:layout_height="75dp"
...
