...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/trojan"
    >
    <Button
        android:id="@+id/btnConfigure"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="5dp"
...
                android:text="Home"
                android:background="@drawable/btn_bg"
                android:textColor="@color/white"
                android:layout_marginRight="3dp"/>

            <Button
                android:id="@+id/btnProf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:text="Profile"
                android:background="@drawable/btn_bg"
...
